<resources>
    <string name="app_name">同行快线</string>
    <string name="updatefun_provider_file_authorities">com.caesar.rongcloudspeed.FileProvider</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="seal_login_text_new_user">新用户</string>
    <string name="seal_login_text_agree">点击登录即同意《用户协议和隐私政策》</string>
    <string name="seal_login_text_forget_password">找回密码</string>
    <string name="seal_login_text_login">登录</string>
    <string name="seal_login_countries_and_regions">国家/地区</string>
    <string name="seal_login_password">密码</string>
    <string name="seal_login_phone_number">手机号</string>
    <string name="seal_login_nick_name">昵称</string>
    <string name="seal_login_register">注册</string>
    <string name="seal_login_code">短信验证码</string>
    <string name="seal_login_send_code">发送验证码</string>
    <string name="seal_login_confirm">确认</string>
    <string name="seal_login_confirm_password">确认密码</string>
    <string name="toast_person_unlogin">请先登录</string>
    <string name="confirm">确定</string>
    <string name="pay_success">支付成功:</string>
    <string name="pay_failed">支付失败:</string>
    <string name="auth_success">授权成功:</string>
    <string name="auth_failed">授权失败:</string>
    <string name="error_missing_appid_rsa_private">错误: 需要配置 PayDemoActivity 中的 APPID 和 RSA_PRIVATE</string>
    <string name="error_missing_hk_partner_seller_rsa_private">错误：需要配置 OrderUtils1_0_HK 中的 PARTNER、SELLER 和 RSA_PRIVATE</string>
    <string name="pay_result">支付结果:</string>
    <string name="network_err">网络错误，请稍后再试</string>
    <string name="seal_login_toast_name_is_null">昵称不能为空</string>
    <string name="seal_login_toast_name_contain_spaces">昵称不能包含空格</string>
    <string name="seal_login_toast_phone_number_is_null">手机号不能为空</string>
    <string name="seal_login_toast_code_is_null">验证码为空</string>
    <string name="seal_login_toast_password_is_null">密码不能为空</string>
    <string name="seal_login_toast_password_cannot_contain_spaces">密码不能包含空格</string>
    <string name="seal_login_toast_phone_or_psw_error">手机或者密码错误</string>
    <string name="seal_login_toast_success">"登录成功"</string>
    <string name="seal_login_toast_not_send_code">未向服务端获取验证码</string>
    <string name="seal_login_toast_passwords_invalid">密码必须为6-16位字符，区分大小写</string>
    <string name="seal_login_toast_new_password_not_null">新密码不能为空</string>
    <string name="seal_login_toast_confirm_password_not_null">确认密码不能为空</string>
    <string name="seal_login_toast_passwords_do_not_match">填写的确认密码与新密码不一致</string>
    <string name="login_error_send_message_frequency">短信发送频率超限</string>
    <string name="login_error_captcha_overdue">验证码过期,请重新请求</string>
    <string name="login_verification_code_error">验证码错误</string>
    <string name="seal_login_kick_by_other">您的账号在别的设备上登录，您被迫下线!</string>
    <string name="common_chat_room">聊天室</string>
    <string name="discovery_chat_room_one">聊天室 I</string>
    <string name="discovery_chat_room_two">聊天室 II</string>
    <string name="discovery_chat_room_three">聊天室 III</string>
    <string name="discovery_chat_room_four">聊天室 IV</string>
    <string name="discovery_chat_room_join_failure">加入聊天室失败</string>
    <string name="discovery_join_chat_room_error">聊天室 ID 为空,请稍后重试</string>
    <string name="new_friends">新的朋友</string>
    <string name="group">群组</string>
    <string name="public_service">公众号</string>
    <string name="seal_search_nick_name">昵称： </string>
    <string name="seal_group_list_include">包含：</string>
    <string name="china">中国</string>
    <string name="lang_en">EN</string>
    <string name="lang_english">English</string>
    <string name="lang_chs">简体中文</string>
    <string name="seal_search">搜索</string>
    <string name="seal_trans">转账</string>
    <string name="beijing">北京</string>
    <string name="common_confirm">确认</string>
    <string name="common_cancel">取消</string>
    <string name="common_done">完成</string>
    <string name="common_save">保存</string>
    <string name="common_publish">发布</string>
    <string name="common_request_success">请求成功</string>
    <string name="common_add_successful">添加成功</string>
    <string name="common_remove_successful">移除成功</string>
    <string name="common_delete_successful">删除成功</string>
    <string name="common_album">相册</string>
    <string name="common_share_success">分享成功</string>
    <string name="common_share_failed">分享失败</string>
    <string name="common_member_count" formatted="true">%d 人</string>
    <string name="common_network_unavailable">当前网络不可用</string>
    <string name="common_network_check">请检查网络设置</string>
    <string-array name="tab_names">
        <item>首页</item>
        <item>课程</item>
        <item>聊天</item>
        <item>人才</item>
        <item>我的</item>
    </string-array>
    <string-array name="tab_name">
        <item>首页</item>
        <item>课程</item>
        <item>聊天</item>
        <item>我的</item>
    </string-array>
    <string-array name="search_name">
        <item>同行课程</item>
        <item>同行圈</item>
        <item>同行招聘</item>
        <item>同行求助</item>
    </string-array>
    <string name="friend_circle">同行圈</string>
    <string name="vote_circle1">歌手大赛</string>
    <string name="vote_circle2">同城信息</string>
    <string name="vote_circle3">交通出行</string>
    <string name="network_error">网络问题请稍后重试</string>
    <string name="common_network_error_and_retry_after">网络问题请稍后重试</string>
    <string name="seal_evaluate_evaluation">评价</string>
    <string name="seal_evaluate_submit_evaluation">提交评价</string>
    <string name="seal_evaluate_resolved_title">请问客服是否解决了您的问题</string>
    <string name="seal_evaluate_resolved">已解决</string>
    <string name="seal_evaluate_unresolved">未解决</string>
    <string name="seal_evaluate_star_title">请您对客服进行评价</string>
    <string name="seal_evaluate_problem_title">存在哪些问题</string>
    <string name="seal_evaluate_title_select_must">存在哪些问题(必选)</string>
    <string name="seal_evaluate_lable_must">必须选择标签</string>
    <string name="seal_evaluate_input_must">必须输入建议</string>
    <string name="seal_conversation_remote_side_is_typing">对方正在输入&#046;&#046;&#046;</string>
    <string name="seal_conversation_remote_side_speaking">对方正在讲话&#046;&#046;&#046;</string>
    <string name="seal_conversation_title_discussion_group">讨论组</string>
    <string name="seal_conversation_title_system">系统消息</string>
    <string name="seal_conversation_title_feedback">意见反馈</string>
    <string name="seal_conversation_title_defult">聊天</string>
    <string name="seal_conversation_sub_group">"群组"</string>
    <string name="seal_conversation_sub_private">"我的私人会话"</string>
    <string name="seal_conversation_sub_discussion">"我的讨论组"</string>
    <string name="seal_conversation_sub_system">"系统消息"</string>
    <string name="seal_conversation_sub_defult">"聊天"</string>
    <string name="seal_conversation_read_receipt_detail">回执详情</string>
    <string name="seal_conversation_read_receipt_unread_persons_format">%1$d人未读</string>
    <string name="seal_conversation_read_receipt_read_persons_format">%1$d人已读</string>
    <string name="seal_conversation_read_receipt_no_person_read">全部未读</string>
    <string name="seal_conversation_read_receipt_no_person_unread">全部已读</string>
    <string name="seal_new_friend_list_no_data">暂无数据</string>
    <string name="seal_new_friend_agree">接&#160;&#160;&#160;受</string>
    <string name="seal_new_friend_agree_ignore">忽&#160;&#160;&#160;略</string>
    <string name="seal_new_friend_request">已请求</string>
    <string name="seal_new_friend_ignore">已忽略</string>
    <string name="seal_new_friend_added">已添加</string>
    <string name="seal_new_friend_deleted">已删除</string>
    <string name="seal_new_friend_add">添加</string>
    <string name="seal_main_title_start_chat">发起聊天</string>
    <string name="seal_main_title_create_group">创建群组</string>
    <string name="seal_main_title_add_friends">添加好友</string>
    <string name="seal_main_title_scan">扫一扫</string>
    <string name="seal_main_title_qrcode">我的二维码</string>
    <string name="seal_main_title_qrcode1">我的收款码</string>
    <string name="seal_main_title_qrcode2">我的付款码</string>
    <string name="seal_main_mine_set_account">账号设置</string>
    <string name="seal_main_mine_setting_language">多语言</string>
    <string name="seal_main_mine_my_wallet">我的钱包</string>
    <string name="seal_main_mine_feedback">意见反馈</string>
    <string name="seal_main_mine_about">关于 同行快线</string>
    <string name="seal_main_mine_customer_xn">小能客服</string>
    <string name="seal_main_mine_online_custom_service">在线客服</string>
    <string name="seal_userinfo_item_user_portrait">用户头像</string>
    <string name="seal_userinfo_item_user_money">用户余额</string>
    <string name="seal_mine_set_account_change_password">密码修改</string>
    <string name="seal_mine_set_account_change_security">安全中心</string>
    <string name="seal_mine_set_account_change_paypassword">支付密码修改</string>
    <string name="seal_mine_set_account_privacy">安全与隐私</string>
    <string name="seal_mine_set_account_new_message_show">新消息通知</string>
    <string name="seal_mine_set_account_clear_cache">清除缓存</string>
    <string name="seal_mine_set_account_logout">退出登录</string>
    <string name="seal_mine_set_account_push_language">设置 Push 中文</string>
    <string name="seal_mine_set_account_push_content">显示 Push 内容</string>
    <string name="seal_mine_set_account_push_message">接收 Push 消息</string>
    <string name="seal_mine_change_language">多语言</string>
    <string name="seal_mine_about_update_log">更新日志</string>
    <string name="seal_mine_about_function_introduce">功能介绍</string>
    <string name="seal_mine_about_rongcloud_web">官方网站</string>
    <string name="seal_mine_about_seal_talk_version">同行快线 版本</string>
    <string name="seal_mine_about_sdk_version">SDK 版本</string>
    <string name="seal_mine_about_close_debug_mode">关闭 debug 模式</string>
    <string name="seal_mine_about_user_online_status">设置用户在线状态</string>
    <string name="seal_title_private_chat">发起聊天</string>
    <string name="seal_title_group_chat">创建群组</string>
    <string name="seal_title_add_contacts">添加好友</string>
    <string name="profile_search_message">查找聊天记录</string>
    <string name="profile_message_notice">消息免打扰</string>
    <string name="profile_set_top">会话置顶</string>
    <string name="profile_clean_message">清除聊天记录</string>
    <string name="profile_screen_shot_notification">截屏通知</string>
    <string name="profile_screen_shot_notification_tips">开启后，在对话中截屏，所有成员都是收到通知</string>
    <string name="profile_clean_timing">定时清理群消息</string>
    <string name="profile_clean_timing_tips">设置定时清理后，系统会定时清理规定时间前的群消息，清理后的消息无法恢复，请谨慎设置</string>
    <string name="profile_user_details">用户详情</string>
    <string name="profile_clean_private_chat_history">确定删除聊天记录吗</string>
    <string name="profile_clean_group_chat_history">确定删除群聊天记录吗</string>
    <string name="profile_clean_discussion_chat_history">确定删除讨论组聊天记录吗</string>
    <string name="profile_all_group_member">全部群成员</string>
    <string name="profile_group_member_online_status">群成员在线状态</string>
    <string name="profile_group_portrait">群头像</string>
    <string name="profile_group_name">群名称</string>
    <string name="profile_group_notice">群公告</string>
    <string name="profile_group_code">群二维码</string>
    <string name="profile_quit_group">删除并退出</string>
    <string name="profile_dismiss_group">解散并退出</string>
    <string name="profile_group_info">群组信息</string>
    <string name="profile_group_total_member">群成员</string>
    <string name="profile_detail_add_friend">加为好友</string>
    <string name="seal_mine_my_account_portrait">头像</string>
    <string name="seal_mine_my_account_nickname">昵称</string>
    <string name="seal_mine_my_account_sknumber">同行快线 号</string>
    <string name="seal_mine_my_account_gender">性别</string>
    <string name="seal_mine_my_account_phone_number">手机号</string>
    <string name="seal_mine_my_account_email_number">邮箱号</string>
    <string name="seal_main_mine_qrcode">我的二维码</string>
    <string name="seal_main_mine_translate">同行快线转账</string>
    <string name="seal_main_mine_paylist">交易记录</string>
</resources>