<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <com.caesar.rongcloudspeed.ui.widget.SelectableRoundedImageView
            android:id="@+id/profile_siv_user_header"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:scaleType="centerCrop"
            app:sriv_left_bottom_corner_radius="3dip"
            app:sriv_left_top_corner_radius="3dip"
            app:sriv_right_bottom_corner_radius="3dip"
            app:sriv_right_top_corner_radius="3dip"
            tools:background="@color/gray" />

        <TextView
            android:id="@+id/profile_tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_siv_user_header"
            android:layout_alignLeft="@id/profile_siv_user_header"
            android:layout_alignRight="@id/profile_siv_user_header"
            android:layout_marginLeft="-5dp"
            android:layout_marginRight="-5dp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:textColor="@color/color_black_text"
            android:textSize="14sp"
            tools:text="用户名" />

        <ImageView
            android:id="@+id/profile_iv_add_member"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_alignTop="@id/profile_siv_user_header"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@id/profile_siv_user_header"
            android:src="@drawable/profile_ic_grid_member_add" />

    </RelativeLayout>


    <com.caesar.rongcloudspeed.ui.view.SettingItemView
        android:id="@+id/siv_search_messages"
        android:layout_width="match_parent"
        android:layout_height="@dimen/seal_private_detail_item_height"
        android:layout_marginTop="@dimen/seal_private_detail_item_margin_top"
        app:item_content="@string/profile_search_message" />

    <com.caesar.rongcloudspeed.ui.view.SettingItemView
        android:id="@+id/siv_user_notification"
        android:layout_width="match_parent"
        android:layout_height="@dimen/seal_private_detail_item_height"
        android:layout_marginTop="@dimen/seal_private_detail_item_margin_top"
        app:item_content="@string/profile_message_notice"
        app:item_divider="true"
        app:item_switch="true"></com.caesar.rongcloudspeed.ui.view.SettingItemView>

    <com.caesar.rongcloudspeed.ui.view.SettingItemView
        android:id="@+id/siv_conversation_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/seal_private_detail_item_height"
        app:item_content="@string/profile_set_top"
        app:item_divider="true"
        app:item_switch="true"></com.caesar.rongcloudspeed.ui.view.SettingItemView>

    <com.caesar.rongcloudspeed.ui.view.SettingItemView
        android:id="@+id/profile_siv_group_screen_shot_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:item_content="@string/profile_screen_shot_notification"
        app:item_switch="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/seal_group_detail_clean_tips_margin_left"
        android:layout_marginTop="@dimen/seal_main_item_margin_bottom"
        android:layout_marginRight="@dimen/seal_group_detail_clean_tips_margin_right"
        android:layout_marginBottom="@dimen/seal_group_detail_clean_tips_margin_bottom"
        android:text="@string/profile_screen_shot_notification_tips"
        android:textColor="@color/seal_group_detail_clean_tips"
        android:textSize="@dimen/seal_group_detail_clean_tips_size" />

    <com.caesar.rongcloudspeed.ui.view.SettingItemView
        android:id="@+id/siv_clean_chat_message"
        android:layout_width="match_parent"
        android:layout_height="@dimen/seal_private_detail_item_height"
        app:item_content="@string/profile_clean_message"></com.caesar.rongcloudspeed.ui.view.SettingItemView>

    <Button
        android:id="@+id/profile_btn_detail_add_friend"
        style="@style/seal_profile_user_detail_btn"
        android:background="@drawable/profile_btn_contact_blue_selector"
        android:text="@string/profile_detail_add_friend"
        android:textColor="@color/white"
        android:visibility="gone" />

</LinearLayout>