<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/seal_ic_popup_bg"
    android:orientation="vertical">


    <Button
        android:id="@+id/btn_start_qrcode"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/seal_main_title_popup_item_height"
        android:drawableLeft="@drawable/myqrcode"
        android:drawablePadding="@dimen/seal_main_title_popup_item_drawable_padding"
        android:paddingLeft="@dimen/seal_main_title_popup_item_padding"
        android:paddingRight="@dimen/seal_main_title_popup_item_padding"
        android:gravity="center_vertical"
        android:text="@string/seal_main_title_qrcode"
        android:background= "@null"
        android:textColor="@color/seal_main_title_more_text_color"
        android:textSize="@dimen/seal_main_title_item_text_size" />

    <Button
        android:id="@+id/btn_start_qrcode1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/notify_payment"
        android:drawablePadding="@dimen/seal_main_title_popup_item_drawable_padding"
        android:paddingLeft="@dimen/seal_main_title_popup_item_padding"
        android:paddingRight="@dimen/seal_main_title_popup_item_padding"
        android:gravity="center_vertical"
        android:background= "@null"
        android:text="@string/seal_main_title_qrcode1"
        android:textColor="@color/seal_main_title_more_text_color"
        android:textSize="@dimen/seal_main_title_item_text_size" />


    <Button
        android:id="@+id/btn_start_qrcode2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/notify_shortcut_collect"
        android:drawablePadding="@dimen/seal_main_title_popup_item_drawable_padding"
        android:paddingLeft="@dimen/seal_main_title_popup_item_padding"
        android:paddingRight="@dimen/seal_main_title_popup_item_padding"
        android:gravity="center_vertical"
        android:background= "@null"
        android:text="@string/seal_main_title_qrcode2"
        android:textColor="@color/seal_main_title_more_text_color"
        android:textSize="@dimen/seal_main_title_item_text_size" />


</LinearLayout>